            - The 'Convert to ...' buttons have been reworked :
                - When a button is disabled, the reason is displayed as tool-tip.
                - The constraints for properties & relationships are better respected.
            - In the list-views for Product/Service lines, lines related to deleted Invoice/Quote/... are excluded.
        * Opportunities :
            - You can now create unsuccessful phone calls from an Opportunity's detail-view :
                - A button has been added (not enabled in default installations).
                - In the block "Linked Contacts", you can activate an new action in the configuration (idem).
            - The field 'Opportunity.chance_to_win' checks now that the value is between 0 & 100.
        * Crudity :
            - BEWARE: the date format corresponds now to your server's language (i.e. 'settings.LANGUAGE_CODE').

  Developers side :
  -----------------
    - The version of 'Django' is now "5.1".
      You should probably read the following releases notes for Django versions :
        - https://docs.djangoproject.com/en/5.1/releases/5.0/
          Some important items :
            - The "logout" view uses now POST only.
            - The 'settings.py' value 'USE_L10N' has been removed.
            - The management of choices (models & forms fields) have been reworked ;
              it caused an issue during our upgrade with a strange couple form-field/form-widget which
              uses 3-tuples (see 'creme.emails.forms.sending.SendingConfigField' if you have an identical issue).
              The class 'django.forms.fields.CallableChoiceIterator' has been removed ;
              use 'django.utils.choices.CallableChoiceIterator' instead.
        - https://docs.djangoproject.com/en/5.1/releases/5.1/

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The constant 'DISPLAY_CURRENCY_LOCAL_SYMBOL' is deprecated;