@@ -7,8 +7,6 @@
 \documentclass[french,11pt]{article}
 \usepackage[french]{babel}
 \usepackage[french]{layout}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
 \usepackage[a4paper]{geometry}
 \usepackage{units}
 \usepackage{bera}
